@@ -64,6 +64,7 @@ FEATURE:    Added nullpointer checks to GDISP image functions (with new error co
 FIX:		Add cache flushing to the ChibiOS FATFS/PETITFS block drivers. Needed for STM32F7 chips. This should really be in the ChibiOS DMA routines.
 FIX:		Add cache flushing to enable DMA2D accelerated bitblits in the STM32LTDC driver on the STM32F7 cpu.
 FIX:		Improved STM32F469i-Discovery board support.
+FIX:		Improved STM32F746G-Discovery board support.
 
 
 *** Release 2.7 ***
